--- a/contacto1.html
+++ b/contacto1.html
@@ -70,20 +70,20 @@
         <div class="col-sm-10 col-md-10 col 10">
           <form>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Luis" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Luis" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Archila" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Archila" readonly>
             </div>
             <div class="mb-3">
               <input class="controls-contacto" type="text" name="direccion" id="direccion"
-                value="archila77@gmail.com" disabled>
+                value="archila77@gmail.com" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="56789012" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="56789012" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 4 de Mixco" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 4 de Mixco" readonly>
             </div>
           </form>
         </div>
