--- a/contacto2.html
+++ b/contacto2.html
@@ -70,20 +70,20 @@
         <div class="col-sm-10 col-md-10 col 10">
           <form>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="José" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="José" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Villeda" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Villeda" readonly>
             </div>
             <div class="mb-3">
               <input class="controls-contacto" type="text" name="direccion" id="direccion" value="villeda2005@gmail.com"
-                disabled>
+              readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="43215678" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="43215678" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 15 Guatemala" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 15 Guatemala" readonly>
             </div>
           </form>
         </div>
