--- a/contacto3.html
+++ b/contacto3.html
@@ -70,20 +70,20 @@
         <div class="col-sm-10 col-md-10 col 10">
           <form>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Luis" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Luis" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Corzo" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Corzo" readonly>
             </div>
             <div class="mb-3">
               <input class="controls-contacto" type="text" name="direccion" id="direccion"
-                value="luiscorzo@gmail.com" disabled>
+                value="luiscorzo@gmail.com" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="59867890" disabled>          
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="59867890" readonly>          
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 11 Guatemala" disabled>          
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 11 Guatemala" readonly>          
             </div>
           </form>
         </div>
