--- a/contacto4.html
+++ b/contacto4.html
@@ -70,20 +70,20 @@
         <div class="col-sm-10 col-md-10 col 10">
           <form>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Víctor" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Víctor" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Cancinos" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Cancinos" readonly>
             </div>
             <div class="mb-3">
               <input class="controls-contacto" type="text" name="direccion" id="direccion"
-                value="cancinos99@gmail.com" disabled>
+                value="cancinos99@gmail.com" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="21908123" disabled>          
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="21908123" readonly>          
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 12 Guatemala" disabled>          
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 12 Guatemala" readonly>          
             </div>
           </form>
         </div>
