--- a/contacto5.html
+++ b/contacto5.html
@@ -66,20 +66,20 @@
         <div class="col-sm-10 col-md-10 col 10">
           <form>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Maynor" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Maynor" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Delgado" disabled>
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Delgado" readonly>
             </div>
             <div class="mb-3">
               <input class="controls-contacto" type="text" name="direccion" id="direccion"
-                value="maynor@gmail.com" disabled>
+                value="maynor@gmail.com" readonly>
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="45905280" disabled>          
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="45905280" readonly>          
             </div>
             <div class="mb-3">
-              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 7 Guatemala" disabled>          
+              <input class="controls-contacto" type="text" name="nombre" id="nombre" value="Zona 7 Guatemala" readonly>          
             </div>
           </form>
         </div>
