--- a/perfil.html
+++ b/perfil.html
@@ -70,19 +70,19 @@
                         </div>
                         <div class="mb-3">
                             <input class="controls-contacto" type="text" name="apellido" id="apellido"
-                                value="Corzo Reyes" disabled>
+                                value="Corzo Reyes" readonly>
                         </div>
                         <div class="mb-3">
                             <input class="controls-contacto" type="text" name="direccion" id="direccion"
-                                value="octaviocorzo0@gmail.com" disabled>
+                                value="octaviocorzo0@gmail.com" readonly>
                         </div>
                         <div class="mb-3">
                             <input class="controls-contacto"" type=" number" name="telefono" id="telefono"
-                                value="59864595" disabled>
+                                value="59864595" readonly>
                         </div>
                         <div class="mb-3">
                             <input class="controls-contacto" type="text" name="direccion" id="direccion"
-                                value="Zona 11 Guatemala" disabled>
+                                value="Zona 11 Guatemala" readonly>
                         </div>
                     </form>
                 </div>
